# service-message-management

./: Makefile  README.md  app.py  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI_CD  CI_CD.yml
src/datastore/: __init__.py  dynamodb_client.py  table.py
src/models/: __init__.py  message.py  recipient.py
src/service/: __init__.py  controller.py  views.py
tests/: conftest.py  test_views.py
