[tool.poetry]
name = "service-message-management"
version = "0.1.0"
description = "Service for sending and retrieving messages"
authors = ["Atom0713 <sliusarenko.artem@gmail.com>"]
readme = "README.md"
packages = [{include = "service_message_management"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
boto3 = "^1.26.59"
moto = "^4.1.1"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"


[tool.poetry.group.code_checks]

[tool.poetry.group.code_checks.dependencies]
mypy = "^0.941"
flake8 = "^6.0.0"

[tool.poetry.group.code_formatting]

[tool.poetry.group.code_formatting.dependencies]
isort = "^5.12.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '\.git/|\.mypy_cache/|\.venv/|\.pytest_cache/|\.vscode/|__pycahce__/'

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["tests", "service"]
skip = [".git", ".mypy_cache", ".venv", ".pytest_cache", ".vscode", "__pycache__"]

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
no_implicit_reexport = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
local_partial_types = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
